added /all to room